<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dialogs.ConfirmarBorrarTodosLosPedidos_Dialog">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Message_EstasSeguro"
        android:textColor="@android:color/black"
        android:textSize="19dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="center"
        android:text="@string/Dialog_BorrarTodaListaPedidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonConfirmarBorrado"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/SingleWord_Delete"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/buttonCancelarBorrado"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:text="@string/SingleWord_Cancelar"
        app:layout_constraintBottom_toBottomOf="@+id/buttonConfirmarBorrado"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/buttonConfirmarBorrado" />
</androidx.constraintlayout.widget.ConstraintLayout>