<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dialogs.DetallesDePedido_Dialog">

    <TextView
        android:id="@+id/textViewNPedidoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/NumeroPedido"
        android:textSize="24dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/listaDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView27" />

    <TextView
        android:id="@+id/textViewNombreDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="nombreCliente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNPedidoDetails" />

    <TextView
        android:id="@+id/textViewTelefonoDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:text="@string/tfno_subrayado"
        app:layout_constraintStart_toStartOf="@+id/textViewNombreDetail"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreDetail" />

    <TextView
        android:id="@+id/textViewFechaDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Fecha recogida"
        app:layout_constraintStart_toStartOf="@+id/textViewTelefonoDetails"
        app:layout_constraintTop_toBottomOf="@+id/textViewTelefonoDetails" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/SingleWord_Details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFechaDetail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEliminarPedido"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/SingleWord_BorrarPedido"
        android:textColor="@color/colorPrimary"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="1dp" />

    <ImageButton
        android:id="@+id/imageViewBackDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="@android:color/white"
        android:foregroundTint="@color/colorPrimary"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNPedidoDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNPedidoDetails" />

    <ImageButton
        android:id="@+id/imageButtonEditarPedidoDetailPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/white"
        android:src="@drawable/ic_create"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNPedidoDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewNPedidoDetails" />

    <Button
        android:id="@+id/buttonMarcarComoPreparado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        android:textSize="12dp"
        android:text="@string/SingleWord_Preparado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonMarcarComoEntregado" />

    <Button
        android:id="@+id/buttonMarcarComoEntregado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="12dp"
        android:elevation="0dp"
        android:text="@string/SingleWord_Entregado"
        app:layout_constraintBottom_toTopOf="@+id/buttonEliminarPedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaDescripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>