<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tarjetaPedido"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="10dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="4dp"
    android:clickable="true"
    app:strokeWidth="1dp"
    app:strokeColor="@color/colorPrimary"
    app:cardCornerRadius="20dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/textViewPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:text="..."
            app:layout_constraintEnd_toEndOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="@+id/textViewDescripcion"
            app:layout_constraintTop_toBottomOf="@+id/textViewDescripcion" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/SingleWord_Descripcion"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombreClienteAlerta" />

        <TextView
            android:id="@+id/textViewFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="dd-mm-yy"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textViewNumeroPedido"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumeroPedido" />

        <TextView
            android:id="@+id/textViewNombreClienteAlerta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"

            android:layout_marginEnd="8dp"
            android:text="Nombre cliente"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewNumeroPedido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/NumeroPedido"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewNombreClienteAlerta" />

        <ImageView
            android:id="@+id/imageViewPreparado"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="8dp"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/textViewPreparado"
            app:layout_constraintEnd_toStartOf="@+id/textViewPreparado"
            app:layout_constraintTop_toTopOf="@+id/textViewPreparado"
            app:srcCompat="@drawable/ic_done_24px"
            />

        <TextView
            android:id="@+id/textViewPreparado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/SingleWord_Preparado"
            android:textSize="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewEntregado"
            app:layout_constraintStart_toStartOf="@+id/textViewFecha" />

        <ImageView
            android:id="@+id/imageViewEntregado"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/textViewEntregado"
            app:layout_constraintStart_toStartOf="@+id/imageViewPreparado"
            app:layout_constraintTop_toTopOf="@+id/textViewEntregado"
            app:srcCompat="@drawable/ic_done_all" />

        <TextView
            android:id="@+id/textViewEntregado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SingleWord_Entregado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textViewPreparado" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toStartOf="@+id/divider4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNombreClienteAlerta" />

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageViewPreparado"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>